@@ -24,7 +24,8 @@ Eric Schwartz <emschwar at debian dot org> who wrote these man pages:
 Eric Youngdale <eric at andante dot org> author of scsi_info on which sginfo
         is based.
 
-F. Jansen: additions to sg_scan
+Frank Jansen <fjansen at egenera dot com>: additions to sg_scan; contributed
+        code for '--alloc-length=' option in sg_persist [20090402]
 
 Grant Grundler <grundler at parisc-linux dot org> co-author of blk512-linux
         that has become sg_format [20050201]
@@ -46,7 +47,7 @@ James Bottomley <jejb at parisc-linux dot org> co-author of blk512-linux
         that has become sg_format [20050201]
 
 Joe Krahn <krahn at niehs dot nih dot gov> help with int64_t cleanup
-	[20071219]
+        [20071219]
 
 Kai Makisara <Kai dot Makisara at kolumbus dot fi> help with tape
         minor numbers in lk 2.6 plus earlier advice [20081008]
@@ -92,4 +93,4 @@ Trent Piepho <xyzzy at speakeasy dot org> print out some "sense key specific"
 
 
 Doug Gilbert
-9th October 2008
+2nd April 2009
